invest-app/main/default/objects/InvestmentSnapshot__c/InvestmentSnapshot__c.object-meta.xml
<CustomObject>
    <label>Investment Snapshot</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Investment Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>