invest-app/main/default/objects/InvestmentSnapshot__c/fields/CurrentGain__c.field-meta.xml
<CustomField>
    <fullName>CurrentGain__c</fullName>
    <formula>RoiPercentage__c *  InvestedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>