invest-app/main/default/objects/InvestmentSnapshot__c/fields/Deposits__c.field-meta.xml
<CustomField>
    <fullName>Deposits__c</fullName>
    <description>The amount deposited during the period</description>
    <label>Deposits</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>