invest-app/main/default/objects/InvestmentSnapshot__c/fields/InvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestedAmount__c</fullName>
    <formula>StartingInvestmentAmount__c + Deposits__c + Withdrawals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>