invest-app/main/default/objects/InvestmentSnapshot__c/fields/PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodEndDate__c</fullName>
    <formula>PeriodStartDate__c + (PeriodLengthDays__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>