invest-app/main/default/objects/InvestmentSnapshot__c/fields/PeriodLengthDays__c.field-meta.xml
<CustomField>
    <fullName>PeriodLengthDays__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Period Length in Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>