invest-app/main/default/objects/InvestmentSnapshot__c/fields/PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodStartDate__c</fullName>
    <label>Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>