invest-app/main/default/objects/InvestmentSnapshot__c/fields/PreviousSnapshot__c.field-meta.xml
<CustomField>
    <fullName>PreviousSnapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Snapshot</label>
    <referenceTo>InvestmentSnapshot__c</referenceTo>
    <relationshipLabel>Next Snapshots</relationshipLabel>
    <relationshipName>NextSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>