invest-app/main/default/objects/InvestmentSnapshot__c/fields/RoiPercentage__c.field-meta.xml
<CustomField>
    <fullName>RoiPercentage__c</fullName>
    <formula>(Balance__c /  InvestedAmount__c) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoiPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>