invest-app/main/default/objects/InvestmentSnapshot__c/fields/StartingInvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>StartingInvestmentAmount__c</fullName>
    <description>The amount of the investment as of previous Snapshot. Filled in automatically</description>
    <label>Starting Investment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>