invest-app/main/default/objects/InvestmentSnapshot__c/fields/WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>WeekNumber__c</fullName>
    <formula>MOD(FLOOR( (  PeriodStartDate__c  - DATE(2018,01,01))/7),52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>