invest-app/main/default/objects/InvestmentSnapshot__c/fields/Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>Withdrawals__c</fullName>
    <description>The amount withdrawn during the period</description>
    <label>Withdrawals</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>